--- a/demo.html
+++ b/demo.html
@@ -7,7 +7,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>CeeVee - Free Responsive HTML5/CSS3 Template</title>
+	<title>Jamyang Lotus</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -52,9 +52,9 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">I'm Jonathan Doe.</h1>
-            <h3>I'm a Manila based <span>graphic designer</span>, <span>illustrator</span> and <span>webdesigner</span> creating awesome and
-            effective visual identities for companies of all sizes around the globe. Let's <a class="smoothscroll" href="#about">start scrolling</a>
+            <h1 class="responsive-headline">I'm Jamyang Lotus.</h1>
+            <h3>I'm a Ladakh based <span>Computer Science Undergraduate</span>, <span>Student</span> and <span>keen learner</span> learning awesome and
+            effective technologies for the benefit of human species. Let's <a class="smoothscroll" href="#about">start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
@@ -85,9 +85,9 @@
 
             <h1>Style Demo.</h1>
 
-            <p class="lead add-bottom">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
-            deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate.
-            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.
+            <p class="lead add-bottom">
+		    Life brings us as many joyful moments as it does downfalls, and although there are days we wish there was a manual to follow, it simply wouldn’t be the same without the spontaneity. The journey of life may not become easier as we grow older, but we do seem to understand it better as our perspectives evolve. Whether you’re embarking on a new adventure right out of school or you want to explore different paths in your personal life, it’s never too late to change what the future looks like.
+
             </p>
 
             <hr>
@@ -103,12 +103,8 @@
             <h3>Paragraph and Image</h3>
 
             <p><a href="#"><img width="120" height="120" class="pull-left" alt="sample-image" src="images/sample-image.jpg"></a>
-  			   Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum.
-  			   Cras id urna. Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu
-  			   posuere nunc justo tempus leo. Donec mattis, purus nec placerat bibendum, dui pede condimentum
-  			   odio, ac blandit ante orci ut diam. Cras fringilla magna. Phasellus suscipit, leo a pharetra
-  			   condimentum, lorem tellus eleifend magna, eget fringilla velit magna id neque.
-  			   posuere nunc justo tempus leo. </p>
+  			   Life brings us as many joyful moments as it does downfalls, and although there are days we wish there was a manual to follow, it simply wouldn’t be the same without the spontaneity. The journey of life may not become easier as we grow older, but we do seem to understand it better as our perspectives evolve. Whether you’re embarking on a new adventure right out of school or you want to explore different paths in your personal life, it’s never too late to change what the future looks like.
+
 
             <p>A <a href="#">link</a>,
   			   <abbr title="this really isn't a very good description">abbrebation</abbr>,
