--- a/demo.html
+++ b/demo.html
@@ -53,7 +53,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Jamyang Lotus.</h1>
-            <h3>I'm a Ladakh based <span>Computer Science Undergraduate</span>, <span>Student</span> and <span>keen learner</span> learning awesome and
+            <h3>I'm a Ladakh based <span>Computer Science Undergraduate Student</span> and <span>keen learner</span> learning awesome and
             effective technologies for the benefit of human species. Let's <a class="smoothscroll" href="#about">start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
