--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Jamyang Lotus.</h1>
-            <h3>I'm a Ladakh based <span>Computer Science Undergraduate</span>, <span>Student</span> and <span>studying at NIT Srinagar</span> learning awesome and
+            <h3>I'm a Ladakh based <span>Computer Science Undergraduate Student studying at NIT Srinagar,</span> learning awesome and
             effective technologies for helping the human species. Let's <a class="smoothscroll" href="#about">start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
@@ -572,9 +572,8 @@ If you’re in need of motivation and inspiration, these life quotes from Hoda K
          <div class="seven columns">
 
             <h2><span class="lead">Unde Omnis Iste</span></h2>
-            <p><span class="lead">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae. </span></p>
-
+            <p><span class="lead">The Struggle you are in today is developing the strength you need for tomorrow </span></p>
+.
          </div>
 
          <div class="three columns action">
@@ -620,11 +619,10 @@ If you’re in need of motivation and inspiration, these life quotes from Hoda K
 
                      <li>
                         <blockquote>
-                           <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                           Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                           nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
+                           <p>Lorem Ipsum. Chilo va
+				  Zospa
                            </p>
-                           <cite>Mr. Adobe</cite>
+                           <cite>Mr. 360</cite>
                         </blockquote>
                      </li> <!-- slide ends -->
 
@@ -655,9 +653,8 @@ If you’re in need of motivation and inspiration, these life quotes from Hoda K
 
             <div class="ten columns">
 
-                  <p class="lead">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-                  eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-                  voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+                  <p class="lead">
+			  The Struggle you are in today is developing the strength you need for tomorrow
                   </p>
 
             </div>
@@ -718,9 +715,9 @@ If you’re in need of motivation and inspiration, these life quotes from Hoda K
 
 					   <h4>Address and Phone</h4>
 					   <p class="address">
-						   Jonathan Doe<br>
-						   1600 Amphitheatre Parkway <br>
-						   Mountain View, CA 94043 US<br>
+						   Jamyang Lotus<br>
+						   194101,Leh-Ladakh <br>
+						   India<br>
 						   <span>(123) 456-7890</span>
 					   </p>
 
@@ -733,17 +730,15 @@ If you’re in need of motivation and inspiration, these life quotes from Hoda K
                   <ul id="twitter">
                      <li>
                         <span>
-                        This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                        Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum
-                        <a href="#">http://t.co/CGIrdxIlI3</a>
+                        The Struggle you are in today is developing the strength you need for tomorrow
+                        <a href="#">http://faltu.falcom</a>
                         </span>
                         <b><a href="#">2 Days Ago</a></b>
                      </li>
                      <li>
                         <span>
-                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-                        eaque ipsa quae ab illo inventore veritatis et quasi
-                        <a href="#">http://t.co/CGIrdxIlI3</a>
+                        The Struggle you are in today is developing the strength you need for tomorrow
+                        <a href="#">http://faltu.falcom</a>
                         </span>
                         <b><a href="#">3 Days Ago</a></b>
                      </li>
