--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwie-a2TyIztAhXBcn0KHSuiDlcQFjAAegQIBRAC&url=https%3A%2F%2Fin.linkedin.com%2Fin%2Fjamyang-lotus-b39721161&usg=AOvVaw0HANEzpRIOXO8kRj-QCP7I"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
                <li><a href="#"><i class="fa fa-skype"></i></a></li>
@@ -241,12 +241,12 @@ If you’re in need of motivation and inspiration, these life quotes from Hoda K
 				<div class="bars">
 
 				   <ul class="skills">
-					   <li><span class="bar-expand photoshop"></span><em>Photoshop</em></li>
-                  <li><span class="bar-expand illustrator"></span><em>Illustrator</em></li>
-						<li><span class="bar-expand wordpress"></span><em>Wordpress</em></li>
+					   <li><span class="bar-expand photoshop"></span><em>C</em></li>
+                  <li><span class="bar-expand illustrator"></span><em>C++</em></li>
+						<li><span class="bar-expand wordpress"></span><em>Python</em></li>
 						<li><span class="bar-expand css"></span><em>CSS</em></li>
 						<li><span class="bar-expand html5"></span><em>HTML5</em></li>
-                  <li><span class="bar-expand jquery"></span><em>jQuery</em></li>
+                  <li><span class="bar-expand jquery"></span><em>Machine Learning</em></li>
 					</ul>
 
 				</div><!-- end skill-bars -->
@@ -571,7 +571,7 @@ If you’re in need of motivation and inspiration, these life quotes from Hoda K
 
          <div class="seven columns">
 
-            <h2><span class="lead">Unde Omnis Iste</span></h2>
+            <h2><span class="lead">Jamyang Lotus</span></h2>
             <p><span class="lead">The Struggle you are in today is developing the strength you need for tomorrow </span></p>
 .
          </div>
