--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwie-a2TyIztAhXBcn0KHSuiDlcQFjAAegQIBRAC&url=https%3A%2F%2Fin.linkedin.com%2Fin%2Fjamyang-lotus-b39721161&usg=AOvVaw0HANEzpRIOXO8kRj-QCP7I"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/jamyang-lotus-12667615a"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
                <li><a href="#"><i class="fa fa-skype"></i></a></li>
@@ -765,7 +765,7 @@ If you’re in need of motivation and inspiration, these life quotes from Hoda K
                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwie-a2TyIztAhXBcn0KHSuiDlcQFjAAegQIBRAC&url=https%3A%2F%2Fin.linkedin.com%2Fin%2Fjamyang-lotus-b39721161&usg=AOvVaw0HANEzpRIOXO8kRj-QCP7I"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/jamyang-lotus-12667615a"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
                <li><a href="#"><i class="fa fa-skype"></i></a></li>
