--- a/index.html
+++ b/index.html
@@ -97,11 +97,10 @@
             <h2>About Me</h2>
 
             <p>
-		    Life brings us as many joyful moments as it does downfalls, and although there are days we wish there was a manual to follow, it simply wouldn’t be the same without the spontaneity. The journey of life may not become easier as we grow older, but we do seem to understand it better as our perspectives evolve. Whether you’re embarking on a new adventure right out of school or you want to explore different paths in your personal life, it’s never too late to change what the future looks like.
-
-If you’re in need of motivation and inspiration, these life quotes from Hoda Kotb, Meghan Markle, Reese Witherspoon, among others, are exactly what you need to hear. Advice from practicing self-love to having a sense of humor to being optimistic never grows old and will surely help you find the push you need to get where you’re going.
+		Adaptable Computer Science major (8.85GPA) currently attending the National Institute Of Technology, Srinagar. Aiming
+to leverage proven creative thinking and language skills to successfully fill the Soware Engineer role at your company.
+Frequently praised as focused by my peers, I can be relied upon to help your company achieve its goals.    
             </p>
-
             <div class="row">
 
                <div class="columns contact-details">
@@ -154,10 +153,8 @@ If you’re in need of motivation and inspiration, these life quotes from Hoda K
                   <p class="info">B.Tech Computer Science<span>&bull;</span> <em class="date">2021</em></p>
 
                   <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+                  Bachelor of Technology - BTech, Computer Science
+2017 - 2021
                   </p>
 
                </div>
@@ -168,14 +165,12 @@ If you’re in need of motivation and inspiration, these life quotes from Hoda K
 
                <div class="twelve columns">
 
-                  <h3>Jawahar Navodaya Vidyalya,Leh-Ladakh</h3>
+                  <h3>Jawahar Navodaya Vidyalaya,Leh-Ladakh</h3>
                   <p class="info">Higher Secondary <span>&bull;</span> <em class="date">March 2017</em></p>
 
                   <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
+                  HSC, Science(Non-Medical)
+                  2014 - 2017
                   </p>
 
                </div>
@@ -205,10 +200,9 @@ If you’re in need of motivation and inspiration, these life quotes from Hoda K
                   <p class="info">Machine Learning Intern <span>&bull;</span> <em class="date">Dec 2019 - Present</em></p>
 
                   <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+                  Created a Machine Learning model for day and night image classifier within the stipulated time. Used and
+applied machine learning and computer vision as well as programming skills to create and test the model.
+Worked with a 3 member team for accomplishing the same.
                   </p>
 
                </div>
