--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
             <h2>About Me</h2>
 
             <p>
-		Adaptable Computer Science major (8.85GPA) currently attending the National Institute Of Technology, Srinagar. Aiming
-to leverage proven creative thinking and language skills to successfully fill the Soware Engineer role at your company.
+		Adaptable Computer Science major currently attending the National Institute Of Technology, Srinagar. Aiming
+to leverage proven creative thinking and language skills to successfully fill the Software Engineer role at your company.
 Frequently praised as focused by my peers, I can be relied upon to help your company achieve its goals.    
             </p>
             <div class="row">
@@ -153,7 +153,7 @@ Frequently praised as focused by my peers, I can be relied upon to help your com
                   <p class="info">B.Tech Computer Science<span>&bull;</span> <em class="date">2021</em></p>
 
                   <p>
-                  Bachelor of Technology - BTech, Computer Science
+                  Bachelor of Technology - BTech, Computer Science<br>
 2017 - 2021
                   </p>
 
@@ -169,7 +169,7 @@ Frequently praised as focused by my peers, I can be relied upon to help your com
                   <p class="info">Higher Secondary <span>&bull;</span> <em class="date">March 2017</em></p>
 
                   <p>
-                  HSC, Science(Non-Medical)
+                  HSC, Science(Non-Medical)<br>
                   2014 - 2017
                   </p>
 
