--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
    <!-- Header
    ================================================== -->
-   <header id="home" style="color:black;">
+   <header id="home" style="color:magenta;">
 
       <nav id="nav-wrap">
 
