--- a/index.html
+++ b/index.html
@@ -477,6 +477,9 @@ If you’re in need of motivation and inspiration, these life quotes from Hoda K
       </div>
 
    </footer> <!-- Footer End-->
+	
+	<div id="sfcfpecmm5hgwyp3tsz7b8y7ckb68wlxmjs"></div><script type="text/javascript" src="https://counter8.stat.ovh/private/counter.js?c=fpecmm5hgwyp3tsz7b8y7ckb68wlxmjs&down=async" async></script><noscript><a href="https://www.freecounterstat.com" title="free website counter"><img src="https://counter8.stat.ovh/private/freecounterstat.php?c=fpecmm5hgwyp3tsz7b8y7ckb68wlxmjs" border="0" title="free website counter" alt="free website counter"></a></noscript>
+	<a href="https://www.freecounterstat.com" title="free website counter"><img src="https://counter8.stat.ovh/private/freecounterstat.php?c=fpecmm5hgwyp3tsz7b8y7ckb68wlxmjs" border="0" title="free website counter" alt="free website counter"></a>
 
    <!-- Java Script
    ================================================== -->
