--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Jamyang Lotus.</h1>
+		 <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="jamyang-lotus-12667615a" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://in.linkedin.com/in/jamyang-lotus-12667615a?trk=profile-badge">Jamyang Lotus</a></div>
             <hr />
             <ul class="social">
                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -193,7 +194,7 @@ Frequently praised as focused by my peers, I can be relied upon to help your com
 
                <div class="twelve columns">
 
-                  <h3>Aptron</h3>
+                  <h3>Noida</h3>
                   <p class="info">Machine Learning Intern <span>&bull;</span> <em class="date">Dec 2019 - Present</em></p>
 
                   <p>
