--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
             <h2>About Me</h2>
 
             <p>
-		Adaptable Computer Science major currently attending the National Institute Of Technology, Srinagar. Aiming
-to leverage proven creative thinking and language skills to successfully fill the Software Engineer role at your company.
+		Adaptable Computer Science major currently working in Gurgaon, Haryana. Aiming
+to leverage proven creative thinking and language skills to successfully fill the Software Engineer/ Data Scientist role at your company.
 Frequently praised as focused by my peers, I can be relied upon to help your company achieve its goals.    
             </p>
             <div class="row">
@@ -260,11 +260,6 @@ If you’re in need of motivation and inspiration, these life quotes from Hoda K
 
       <div class="row">
 
-         <div class="two columns header-col">
-
-            <h1><span>Get Hosting.</span></h1>
-
-         </div>
 
          <div class="seven columns">
 
@@ -292,11 +287,6 @@ If you’re in need of motivation and inspiration, these life quotes from Hoda K
 
          <div class="row">
 
-            <div class="two columns header-col">
-
-               <h1><span>Client Testimonials</span></h1>
-
-            </div>
 
             <div class="ten columns flex-container">
 
@@ -314,14 +304,6 @@ If you’re in need of motivation and inspiration, these life quotes from Hoda K
                         </blockquote>
                      </li> <!-- slide ends -->
 
-                     <li>
-                        <blockquote>
-                           <p>Lorem Ipsum. Chilo va
-				  Zospa
-                           </p>
-                           <cite>Mr. 360</cite>
-                        </blockquote>
-                     </li> <!-- slide ends -->
 
                   </ul>
 
@@ -434,7 +416,7 @@ If you’re in need of motivation and inspiration, these life quotes from Hoda K
                      </li>
                      <li>
                         <span>
-                        The Struggle you are in today is developing the strength you need for tomorrow
+                        Live a life you will remember.
                         <a href="#">http://faltu.falcom</a>
                         </span>
                         <b><a href="#">3 Days Ago</a></b>
