--- a/index.html
+++ b/index.html
@@ -410,14 +410,14 @@ If you’re in need of motivation and inspiration, these life quotes from Hoda K
                      <li>
                         <span>
                         The Struggle you are in today is developing the strength you need for tomorrow
-                        <a href="#">http://faltu.falcom</a>
+                        <a href="http://jamyanglotus.me/">http://jamyanglotus.me/</a>
                         </span>
                         <b><a href="#">2 Days Ago</a></b>
                      </li>
                      <li>
                         <span>
                         Live a life you will remember.
-                        <a href="#">http://faltu.falcom</a>
+                        <a href="http://jamyanglotus.me/">http://jamyanglotus.me/</a>
                         </span>
                         <b><a href="#">3 Days Ago</a></b>
                      </li>
